Small update to index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   		  	<code>
   		  	 Inspired by 
   		  		<a href="https://www.youtube.com/watch?v=qhbuKbxJsk8" target="_blank">Mathlogger</a>,
-  		  	    usign <a href="http://p5js.org" target="_blank">p5js</a><br/>
+  		  	    thanks to <a href="http://p5js.org" target="_blank">p5js</a><br/>
   		  	        <a href="https://github.com/pablo-benito/" target="_blank">Pablo Benito</a><br/>
 			</code>
   		  </div>
